<resources>
    <string name="app_name">ProcureAki</string>
    <string name="aberto">Aberto</string>
    <string name="acesso_sem_login">Acesso sem login</string>
    <string name="buscar_meu_endereco">Buscar meu endereço</string>
    <string name="buscar_por_produto">Buscar por produto</string>
    <string name="buscar_por_estabelecimentos">Buscar por estabelecimentos</string>
    <string name="cadastra_se_agora">Cadastra-se agora</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="cancelar">Cancelar</string>
    <string name="cep">CEP</string>
    <string name="confirmar_endereco">Confirmar este endereço?</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="distancia">Distância</string>
    <string name="email">E-mail</string>
    <string name="email_exemplo">exemplo@email.com</string>
    <string name="empresa">Empresa</string>
    <string name="empresas">Empresas</string>
    <string name="encontrar">Encontrar</string>
    <string name="encontrar_meu_endereco">Encontrar meu endereço</string>
    <string name="endereco">Endereço</string>
    <string name="entrar">Entrar</string>
    <string name="entrar_com_facebook">Entrar com facebook</string>
    <string name="entrar_com_google">Entrar com google</string>
    <string name="entrar_sem_cadastro">Entrar sem cadastro</string>
    <string name="esqueci_senha">Esqueci minha senha</string>
    <string name="fechado">Fechado</string>
    <string name="logradouro_exemplos">Logradouro(rua, avenida, etc.)</string>
    <string name="localize_me_pelo_gps">Localize-me pelo GPS</string>
    <string name="nao">Não</string>
    <string name="nenhum_estabelecimento_encontrado">Nenhum estabelecimento encontrado.</string>
    <string name="nenhum_produto_encontrado">Nenhum produto encontrado.</string>
    <string name="nome">Nome</string>
    <string name="ok">OK</string>
    <string name="o_que_voce_esta_buscando">O que você está buscando?</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="seguir">seguir</string>
    <string name="segmentos">Segmentos</string>
    <string name="senha">Senha</string>
    <string name="sim">Sim</string>
    <string name="tipos">Tipos</string>
    <string name="texto_esqueci_minha_senha">Informe seu e-mail e enviaremos passo-a-passo de como redifinir sua senha.</string>
    <string name="texto_busca_item">Busque por um item ou escolha um segmento abaixo</string>
    <string name="ver_promocoes">Ver promoções</string>


    <!-- Facebook -->
    <string name="facebook_app_id">1385834838396217</string>
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_like_button_not_liked">Curtir</string>
    <string name="com_facebook_like_button_liked">Curtido</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_log_in_button">Entrar pelo Facebook</string>
    <string name="com_facebook_loginview_logged_in_as">Logado como: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logado usando Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_cancel_action">Cancelar</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_usersettingsfragment_log_in_button">Logado&#8230;</string>
    <string name="com_facebook_usersettingsfragment_logged_in">Logado</string>
    <string name="com_facebook_usersettingsfragment_not_logged_in">Não logado</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d esteve aqui</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d esteve aqui</string>
    <string name="com_facebook_picker_done_button_text">Concluído</string>
    <string name="com_facebook_choose_friends">Escolha os amigos</string>
    <string name="com_facebook_nearby">Próximo</string>
    <string name="com_facebook_loading">Carregando...</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_requesterror_web_login">A sua conta Facebook está bloqueada. Por favor entre em www.facebook.com para continuar.</string>
    <string name="com_facebook_requesterror_relogin">Por favor entre em este aplicativo novamente para reconectar a sua conta Facebook.</string>
    <string name="com_facebook_requesterror_password_changed">Sua senha do Facebook mudou. Por favor entre em este aplicativo novamente para reconectar a sua conta Facebook.</string>
    <string name="com_facebook_requesterror_reconnect">Por favor entre em este aplicativo novamente para reconectar a sua conta Facebook.</string>
    <string name="com_facebook_requesterror_permissions">Este aplicativo não tem permissão para fazer isso. Para alterar as permissões, tente fazer o login no aplicativo novamente.</string>
    <string name="com_facebook_tooltip_default">New! You\'re in control - choose what info you want to share with apps.</string>

</resources>
