<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/padding" >

    <LinearLayout
        android:id="@+id/llCampos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:padding="@dimen/padding" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/texto_esqueci_minha_senha"
            android:textColor="@color/black"
            android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llCampos"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:padding="@dimen/padding" >
        <Button
            android:id="@+id/btnOk"
            android:background="@drawable/button_blue"
            style="@style/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="clickOk"
            android:text="@string/ok" />

    </LinearLayout>

</RelativeLayout>